// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentSelectorsForm renders a loading spinner 1`] = `
<div>
  <main
    class="nx-page-main nxrm-content-selectors"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-scroll fa-w-20 nx-page-title__page-icon nx-icon"
            data-icon="scroll"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 0C21.53 0 0 21.53 0 48v64c0 8.84 7.16 16 16 16h80V48C96 21.53 74.47 0 48 0zm208 412.57V352h288V96c0-52.94-43.06-96-96-96H111.59C121.74 13.41 128 29.92 128 48v368c0 38.87 34.65 69.65 74.75 63.12C234.22 474 256 444.46 256 412.57zM288 384v32c0 52.93-43.06 96-96 96h336c61.86 0 112-50.14 112-112 0-8.84-7.16-16-16-16H288z"
              fill="currentColor"
            />
          </svg>
          <span>
            Content Selectors
          </span>
        </h1>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile nxrm-content-selectors-form"
      >
        <div
          class="nx-tile-content"
        >
          <div
            class="nx-loading-spinner"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-notch fa-w-16 fa-spin nx-loading-spinner__icon nx-icon"
              data-icon="circle-notch"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
                fill="currentColor"
              />
            </svg>
            <span>
              Loading…
            </span>
          </div>
        </div>
      </div>
      <div
        class="nxrm-section nx-tile nxrm-content-selectors-preview"
      >
        <div
          class="nx-tile-content"
        >
          <h2 />
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="repository"
            >
              <span
                class="nx-label__text"
              >
                Preview Repository
              </span>
            </label>
            <p
              class="nx-p"
            >
              Select a repository to evaluate the content selector and see the content that would be available
            </p>
            <div
              class="nxrm-select"
            >
              <select
                class="nx-form-select"
                id="repository"
                name="repository"
              />
            </div>
            <button
              class="nx-btn nx-btn--secondary"
              disabled=""
            >
              Preview
            </button>
          </div>
          <div
            class="nxrm-section-toolbar"
          >
            <div
              class="nxrm-spacer"
            />
            <div
              class="nx-text-input nx-filter-input"
            >
              <div
                class="nx-text-input__box"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-filter fa-w-16 nx-icon--filter-icons nx-icon"
                  data-icon="filter"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                    fill="currentColor"
                  />
                </svg>
                <input
                  aria-errormessage="nx-text-input-invalid-message-00000000"
                  class="nx-text-input__input"
                  id="filter"
                  placeholder="Filter"
                  type="text"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-00000000"
                role="alert"
              />
            </div>
          </div>
          <table
            class="nx-table"
          >
            <thead>
              <tr
                class="nx-table-row nx-table-row--header"
              >
                <th
                  class="nx-cell nx-cell--header"
                >
                  <span>
                    Name
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="nx-table-row"
              >
                <td
                  class="nx-cell nx-cell--meta-info"
                  colspan="1"
                >
                  <span>
                    No content in repositories matched the expression
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`ContentSelectorsForm renders the resolved data 1`] = `
<div>
  <main
    class="nx-page-main nxrm-content-selectors"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nx-page-title"
      >
        <h1
          class="nx-h1 nx-feature-name"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-scroll fa-w-20 nx-page-title__page-icon nx-icon"
            data-icon="scroll"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 0C21.53 0 0 21.53 0 48v64c0 8.84 7.16 16 16 16h80V48C96 21.53 74.47 0 48 0zm208 412.57V352h288V96c0-52.94-43.06-96-96-96H111.59C121.74 13.41 128 29.92 128 48v368c0 38.87 34.65 69.65 74.75 63.12C234.22 474 256 444.46 256 412.57zM288 384v32c0 52.93-43.06 96-96 96h336c61.86 0 112-50.14 112-112 0-8.84-7.16-16-16-16H288z"
              fill="currentColor"
            />
          </svg>
          <span>
            Content Selectors
          </span>
        </h1>
      </div>
    </div>
    <div
      class="nxrm-content-body"
    >
      <div
        class="nxrm-section nx-tile nxrm-content-selectors-form"
      >
        <div
          class="nx-tile-content"
        >
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="name"
            >
              <span
                class="nx-label__text"
              >
                Name
              </span>
            </label>
            <div
              class="nx-text-input nx-text-input--long pristine disabled"
            >
              <div
                class="nx-text-input__box"
              >
                <input
                  aria-errormessage="nx-text-input-invalid-message-22222222"
                  aria-invalid="false"
                  class="nx-text-input__input"
                  disabled=""
                  id="name"
                  name="name"
                  type="text"
                  value="xss<img src=\\"/static/rapture/resources/icons/x16/user.png\\" onload=\\"alert(0)\\">"
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-22222222"
                role="alert"
              />
            </div>
          </div>
          <div
            class="field-wrapper"
          >
            <label
              class="nx-label"
              id="type"
            >
              <span
                class="nx-label__text"
              >
                Type
              </span>
            </label>
            <p
              aria-labelledby="type"
            >
              CSEL
            </p>
            <div
              class="error-spacing"
            />
          </div>
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label nx-label--optional"
              for="description"
            >
              <span
                class="nx-label__text"
              >
                Description
              </span>
            </label>
            <div
              class="nx-text-input nx-text-input--long pristine"
            >
              <div
                class="nx-text-input__box"
              >
                <input
                  aria-errormessage="nx-text-input-invalid-message-33333333"
                  aria-invalid="false"
                  class="nx-text-input__input"
                  id="description"
                  name="description"
                  type="text"
                  value="description"
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-33333333"
                role="alert"
              />
            </div>
          </div>
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="expression"
            >
              <span
                class="nx-label__text"
              >
                Search Expression
              </span>
            </label>
            <p
              class="nx-p"
            >
              Use the following query to identify repository content
            </p>
            <div
              class="nx-text-input nx-text-input--long pristine nx-text-input--textarea"
            >
              <div
                class="nx-text-input__box"
              >
                <textarea
                  aria-errormessage="nx-text-input-invalid-message-44444444"
                  aria-invalid="false"
                  class="nx-text-input__input"
                  id="expression"
                  name="expression"
                >
                  format == "raw"
                </textarea>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-44444444"
                role="alert"
              />
            </div>
          </div>
          <h4>
            Example Content Selector Expressions
          </h4>
          <p>
            Select "raw" format content:
             
            <code
              class="nx-code"
            >
              format == "raw"
            </code>
          </p>
          <p>
            Select "maven2" content along a path that starts with "/org":
             
            <code
              class="nx-code"
            >
              format == "maven2" and path =^ "/org"
            </code>
          </p>
          <div
            class="nx-footer"
          >
            <button
              aria-disabled="true"
              aria-label="There are no changes"
              class="disabled nx-btn nx-btn--primary"
              title="There are no changes"
              type="submit"
            >
              Save
            </button>
            <button
              class="nx-btn nx-btn--secondary"
            >
              Cancel
            </button>
            <button
              class="nx-btn nx-btn--tertiary"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-trash fa-w-14 nx-icon"
                data-icon="trash"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="nxrm-section nx-tile nxrm-content-selectors-preview"
      >
        <div
          class="nx-tile-content"
        >
          <h2 />
          <div
            class="nx-form-group"
          >
            <label
              class="nx-label"
              for="repository"
            >
              <span
                class="nx-label__text"
              >
                Preview Repository
              </span>
            </label>
            <p
              class="nx-p"
            >
              Select a repository to evaluate the content selector and see the content that would be available
            </p>
            <div
              class="nxrm-select"
            >
              <select
                class="nx-form-select"
                id="repository"
                name="repository"
              />
            </div>
            <button
              class="nx-btn nx-btn--secondary"
            >
              Preview
            </button>
          </div>
          <div
            class="nxrm-section-toolbar"
          >
            <div
              class="nxrm-spacer"
            />
            <div
              class="nx-text-input nx-filter-input"
            >
              <div
                class="nx-text-input__box"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-filter fa-w-16 nx-icon--filter-icons nx-icon"
                  data-icon="filter"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z"
                    fill="currentColor"
                  />
                </svg>
                <input
                  aria-errormessage="nx-text-input-invalid-message-11111111"
                  class="nx-text-input__input"
                  id="filter"
                  placeholder="Filter"
                  type="text"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check fa-w-16 nx-icon nx-icon--valid nx-icon"
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon nx-icon--invalid nx-icon"
                  data-icon="exclamation-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="nx-text-input__invalid-message"
                id="nx-text-input-invalid-message-11111111"
                role="alert"
              />
            </div>
          </div>
          <table
            class="nx-table"
          >
            <thead>
              <tr
                class="nx-table-row nx-table-row--header"
              >
                <th
                  class="nx-cell nx-cell--header"
                >
                  <span>
                    Name
                  </span>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="nx-table-row"
              >
                <td
                  class="nx-cell nx-cell--meta-info"
                  colspan="1"
                >
                  <span>
                    No content in repositories matched the expression
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </main>
</div>
`;
